--- a/public/janken.html
+++ b/public/janken.html
@@ -7,7 +7,7 @@
 <body>
     <form action="/janken">
         <input type="text" name="hand" required>
-        <label for="hand">何を出す？</label>
+        <label for="hand">何を出す？</label\n>
         <input type="submit" values="じゃんけん　ポン">
         <input type="hidden" name="win" value="0">
         <input type="hidden" name="total" value="0">
