--- a/public/bbs.html
+++ b/public/bbs.html
@@ -11,13 +11,16 @@
     <div id="bbs"></div>
     <div>
         <label for="name">名前：</label>
-        <input type="text" id="name">
+        <input type="text" id="name" >
         <label for="name">メッセージ：</label>
         <input type="text" id="message">
         <button type="button" id="post">送信</button>
     </div>
     <div id="check">
         <button type="button" id="check">投稿チェック</button>
+        <button type="button" id="search">検索</button>
+        <button type="button" id="editMessage">内容の編集</button>
+        <button type="button" id="deleteID">メッセージを削除</button>
     </div>
 </body>
 </html>
