検索機能の変更

--- a/public/bbs.html
+++ b/public/bbs.html
@@ -16,11 +16,15 @@
         <input type="text" id="message">
         <button type="button" id="post">送信</button>
     </div>
-    <div id="check">
+    <div>
         <button type="button" id="check">投稿チェック</button>
-        <button type="button" id="search">検索</button>
-        <button type="button" id="editMessage">内容の編集</button>
+        <button type="button" id="editMessage">メッセージを編集</button>
         <button type="button" id="deleteID">メッセージを削除</button>
+    </div>
+    <div>
+        <label for="searchKeyword">検索キーワード：</label>
+        <input type="text" id="searchKeyword">
+        <button type="button" id="search">検索</button>
     </div>
 </body>
 </html>
